# esp32-file-server

./: .gitignore  Cargo.toml  LICENSE  README.md  esp-idf.patch  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs  readdir.rs
