[package]
name = "esp32_file_server"
version = "0.1.0"
authors = ["hammer90"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "svc", "idf", "esp-idf", "esp32"]
description = "RESTful fileserver demo in RUST for ESP32"
repository = "https://github.com/hammer90/esp32-file-server"
license = "MIT"
readme = "README.md"

[package.metadata.espflash]
partition_table = "partitions.csv"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
esp-idf-sys = { version = "0.34", features = ["binstart"] }
esp-idf-svc = "0.48"
esp-idf-hal = "0.43"
embedded-svc = "0.27"
embedded-hal = "0.2.7"
embeddable_rest_server = { git = "https://github.com/hammer90/embeddable-rest-server" }
esp32-sdcard = { git = "https://github.com/hammer90/esp32-sdcard" }
heapless = "0.8"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
embuild = "0.31.4"
anyhow = "1"
